@@ -60,7 +60,7 @@ m_Selection(false),
 m_ShiftState(false),
 m_OpenChars("([<{"),
 m_CloseChars(")]>}"),
-m_VisibleLines(30),
+m_VisibleLines(40),
 m_VisibleColumns(60),
 m_LeftTextPosition(0),
 m_TopTextPosition(0),
