@@ -17,6 +17,8 @@ Fluxus : (C) 2007 Dave Griffiths : dave at pawfal dot org : www.pawfal.org
   was called
 * put the user callback inside a push/pop state
 * added (with-state) (with-primitive) (pdata-map) (pdata-fold)
+* added (pdata-index-map) (pdata-index-fold)
+* collada scene import
 
 0.13
 
